# media-manager

./: LICENSE.md  README.md  TODO.md  compose.yaml  du.out  env.sh  nginx-watch.sh  nginx.conf
.github/workflows/: pages.yaml  todo-check.yaml
api/: convert.go  go.mod  go.sum  library.go  main.go  manager.go  mem.go  memstore.go  sqlite.go  store.go
fsnotifier/: Containerfile  go.mod  go.sum  main.go
protocol/: go.mod  protocol.go
service/: Containerfile  Containerfile.dev  go.mod  go.sum  main.go
trunk/: Containerfile  entrypoint.sh
tusd/: post-finish
ui/: Cargo.toml  index.html  style.scss
ui/public/: styles.css
ui/src/: client.rs  collection.rs  components.rs  data.rs  doc_rs.rs  fake.rs  lib.rs  main.rs  pages.rs  store.rs  transport.rs
ui/src/client/: http.rs  mock.rs
ui/src/components/: dashboard.rs  detail.rs  media_view.rs  mod.rs  notification_tray.rs  query_form.rs  selector.rs  toaster.rs  upload_form.rs
ui/src/pages/: home.rs  images.rs  jobs.rs  media.rs  mod.rs  not_found.rs  player.rs  todo_list.rs  videos.rs
ui/src/pages/player/: controls.rs  info.rs  selector.rs
