[package]
name = "ui"
version = "0.1.0"
edition = "2021"
authors = ["ben little <ben.little@benlittle.dev>"]

[features]
demo = ["dep:lazy_static"]

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
anyhow = "1.0.83"
serde = "1.0.201"
gloo-timers = { version = "0.3.0", features = ["futures"] }
gloo-net = "0.5.0"
futures = "0.3.30"
serde_json = "1.0.117"
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
reqwest = "0.12.4"
sha2 = "0.10.8"
uuid = { version = "1.8.0", features = [ "v4" ] }
base64 = "0.22.1"
lazy_static = { version = "1.5", optional = true }
gloo-file = { version = "0.3.0", features = ["futures"] }
tus-web = "0.1.0"

[dependencies.leptos-use]
version = "0.10.10"
features = [
    "serde",
]

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Storage",
    "Navigator",
    "Clipboard",
    "Location",
    "Event",
    "EventTarget",
    "HtmlInputElement",
    "Blob",
    "File",
    "FileList",
    "FileReader",
    "ReadableStream",
]

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
